--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "@google-cloud/language": "^1.2.0",
+    "bootstrap": "^4.0.0",
     "express": "^4.16.3",
     "firebase": "^4.12.1",
     "react": "^16.3.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "reactstrap": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
