--- a/functions/package.json
+++ b/functions/package.json
@@ -10,8 +10,11 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "@google-cloud/storage": "^1.6.0",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3",
     "firebase-admin": "~5.10.0",
-    "firebase-functions": "^0.9.0"
+    "firebase-functions": "^0.9.1"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
