--- a/functions/package.json
+++ b/functions/package.json
@@ -10,6 +10,7 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "@google-cloud/language": "^1.2.0",
     "@google-cloud/storage": "^1.6.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
