Fix up frontend merge

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@fortawesome/fontawesome": "^1.1.5",
     "@fortawesome/react-fontawesome": "0.0.18",
     "@google-cloud/language": "^1.2.0",
+    "auth0-js": "^9.4.2",
+    "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
     "express": "^4.16.3",
     "firebase": "^4.12.1",
