--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
     "@google-cloud/language": "^1.2.0",
     "@google-cloud/storage": "^1.6.0",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "firebase": "^4.12.1",
     "firebase-admin": "~5.10.0",
